add action_server and client_server to move robot and gripper

--- a/coppelia_msgs/CMakeLists.txt
+++ b/coppelia_msgs/CMakeLists.txt
@@ -8,6 +8,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -19,5 +20,7 @@ endif()
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "action/CoppeliaTask.action"
+  DEPENDENCIES builtin_interfaces geometry_msgs
+
 )
 ament_package()
