Aggiunto qualche task per l'action server e sistemate collisioni nella scena rviz

--- a/coppelia_pick_and_place/CMakeLists.txt
+++ b/coppelia_pick_and_place/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.10)
-cmake_policy(SET CMP0167 NEW)
 project(coppelia_pick_and_place)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
+# ------------------ Dependencies ------------------
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_action REQUIRED)
+find_package(rclcpp_components REQUIRED)
 find_package(moveit_core REQUIRED)
 find_package(moveit_ros_planning REQUIRED)
 find_package(moveit_ros_planning_interface REQUIRED)
@@ -17,138 +17,89 @@ find_package(interactive_markers REQUIRED)
 find_package(geometric_shapes REQUIRED)
 find_package(control_msgs REQUIRED)
 find_package(moveit_msgs REQUIRED)
-# find_package(moveit_task_constructor_core REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(shape_msgs REQUIRED)
-find_package(rclcpp_components REQUIRED)
 find_package(coppelia_msgs REQUIRED)
-find_package(moveit_ros_planning_interface REQUIRED)
 find_package(std_msgs REQUIRED)
 
-
+# ------------------ ACTION SERVER ------------------
 add_library(test_action_server SHARED src/test_action_server.cpp)
 target_include_directories(test_action_server PRIVATE
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
+target_compile_definitions(test_action_server PRIVATE "TASK_SERVER_CPP_BUILDING_DLL")
+ament_target_dependencies(test_action_server
+  rclcpp rclcpp_action rclcpp_components
+  moveit_ros_planning_interface
+  coppelia_msgs)
 
+rclcpp_components_register_node(test_action_server 
+  PLUGIN "coppelia_pick_and_place::TestActionServer" 
+  EXECUTABLE test_action_server_node
+)
 
-# ACTION CLIENT 
+# ------------------ MOVE ACTION SERVER ------------------
+add_library(move_action SHARED src/move_action.cpp)
+target_include_directories(move_action PRIVATE
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
+target_compile_definitions(move_action PRIVATE "MOVE_ACTION_CPP_BUILDING_DLL")
+ament_target_dependencies(move_action
+  rclcpp rclcpp_action rclcpp_components
+  moveit_ros_planning_interface
+  coppelia_msgs)
+
+rclcpp_components_register_node(move_action
+  PLUGIN "coppelia_pick_and_place::MoveActionServer"
+  EXECUTABLE move_action_node
+)
+
+# ------------------ ACTION CLIENT ------------------
 add_library(move_action_client_lib SHARED src/move_action_client.cpp)
 target_include_directories(move_action_client_lib PRIVATE
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
-target_compile_definitions(move_action_client_lib
-  PRIVATE "SIMPLE_ACTION_CLIENT_CPP_BUILDING_DLL")
-
+target_compile_definitions(move_action_client_lib PRIVATE "SIMPLE_ACTION_CLIENT_CPP_BUILDING_DLL")
 ament_target_dependencies(move_action_client_lib
-  "rclcpp"
-  "rclcpp_action"
-  "rclcpp_components"
-  "coppelia_msgs"
-  "geometry_msgs")
+  rclcpp rclcpp_action rclcpp_components
+  coppelia_msgs geometry_msgs)
 
 rclcpp_components_register_node(move_action_client_lib 
   PLUGIN "coppelia_pick_and_place::MoveActionClient" 
   EXECUTABLE move_action_client_node
 )
 
-install(TARGETS move_action_client_lib
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin
-)
-
-  
-# ACTION SERVER
-target_compile_definitions(test_action_server
-  PRIVATE "TASK_SERVER_CPP_BUILDING_DLL")
-ament_target_dependencies(test_action_server
-  "coppelia_msgs"
-  "rclcpp"
-  "rclcpp_action"
-  "rclcpp_components"
-  "moveit_ros_planning_interface")
-rclcpp_components_register_node(test_action_server 
-  PLUGIN "coppelia_pick_and_place::TestActionServer" 
-  EXECUTABLE test_action_server_node
-)
-
-add_library(move_action SHARED src/move_action.cpp)
-target_include_directories(move_action PRIVATE
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
-
-target_compile_definitions(move_action
-  PRIVATE "MOVE_ACTION_CPP_BUILDING_DLL")
-ament_target_dependencies(move_action
-  "coppelia_msgs"
-  "rclcpp"
-  "rclcpp_action"
-  "rclcpp_components"
-  "moveit_ros_planning_interface")
-  rclcpp_components_register_node(move_action
-  PLUGIN "coppelia_pick_and_place::MoveActionServer"
-  EXECUTABLE move_action_node
-)
-
-
-# Install the library
-install(TARGETS 
-  test_action_server
-  move_action
-  # move_action_client
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin
-)
-
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  set(ament_cmake_copyright_FOUND TRUE)
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
-
-
-add_executable(test_mini  src/test_mini.cpp)
+# ------------------ ESEGUIBILI NORMALI ------------------
+add_executable(test_mini src/test_mini.cpp)
 target_include_directories(test_mini PUBLIC include)
-  ament_target_dependencies(
-    test_mini 
-    ament_cmake
-    rclcpp
-    rclcpp_action
-    moveit_core
-    moveit_ros_planning_interface
-    interactive_markers
-    moveit_ros_planning
-    control_msgs
-  )
+ament_target_dependencies(test_mini
+  rclcpp rclcpp_action
+  moveit_core moveit_ros_planning moveit_ros_planning_interface
+  interactive_markers control_msgs)
 
-  add_executable(scena src/scena.cpp)
-  ament_target_dependencies(scena
-    rclcpp
-    moveit_msgs
-    geometry_msgs
-    shape_msgs
-    geometric_shapes
-  )
+add_executable(scena src/scena.cpp)
+ament_target_dependencies(scena
+  rclcpp moveit_msgs geometry_msgs shape_msgs geometric_shapes)
 
-
+# ------------------ INSTALL ------------------
 install(TARGETS
+  test_action_server
+  test_action_server_node
+  move_action
+  move_action_node
+  move_action_client_lib
+  move_action_client_node
   test_mini
-  # move_action_client
-  DESTINATION lib/${PROJECT_NAME}
+  scena
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
 )
-
-install(TARGETS scena
-  DESTINATION lib/${PROJECT_NAME})
-
 
 install(
   DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
 )
-  
 
-
+# ------------------ PACKAGE ------------------
 ament_package()
