Aggiunto il messaggio personalizzato per le info dell'oggetto (centro e dimensione). C'è da correggere il centro, perchè il punto che viene cliccato con il mouse corrisponde soltanto al punto più superficiale

--- a/vision_localizer/CMakeLists.txt
+++ b/vision_localizer/CMakeLists.txt
@@ -1,52 +1,75 @@
 cmake_minimum_required(VERSION 3.8)
 project(vision_localizer)
 
-# ------------------------------------------------------------------------------
-# Compiler options
-# ------------------------------------------------------------------------------
+# -------------------------------------------------------------------
+# Compiler flags
+# -------------------------------------------------------------------
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# ------------------------------------------------------------------------------
-# Dependencies
-# ------------------------------------------------------------------------------
+# -------------------------------------------------------------------
+# Find dependencies
+# -------------------------------------------------------------------
 find_package(ament_cmake REQUIRED)
-find_package(cv_bridge REQUIRED)
-find_package(geometry_msgs REQUIRED)
-find_package(OpenCV REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+find_package(cv_bridge REQUIRED)
+find_package(OpenCV REQUIRED)
+find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 
-# ------------------------------------------------------------------------------
-# Include directories
-# ------------------------------------------------------------------------------
+find_package(rosidl_default_generators REQUIRED)
+
+# -------------------------------------------------------------------
+# Message generation
+# -------------------------------------------------------------------
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/ObjectInfo.msg"
+  DEPENDENCIES geometry_msgs builtin_interfaces
+)
+
+ament_export_dependencies(rosidl_default_runtime)
+
+# -------------------------------------------------------------------
+# Include paths
+# -------------------------------------------------------------------
 include_directories(
   include
   ${OpenCV_INCLUDE_DIRS}
 )
 
-# ------------------------------------------------------------------------------
-# Executable node
-# ------------------------------------------------------------------------------
+# -------------------------------------------------------------------
+# Executable
+# -------------------------------------------------------------------
 add_executable(object_localizer
   src/object_localizer_main.cpp
   src/object_localizer.cpp
 )
 
 ament_target_dependencies(object_localizer
-  cv_bridge
-  geometry_msgs
-  OpenCV
   rclcpp
   sensor_msgs
+  geometry_msgs
+  builtin_interfaces
+  tf2
   tf2_ros
+  tf2_geometry_msgs
+  cv_bridge
+  OpenCV
 )
 
-# ------------------------------------------------------------------------------
-# Install targets and resources
-# ------------------------------------------------------------------------------
+# ✨ Link messaggi custom al nodo
+rosidl_target_interfaces(object_localizer
+  ${PROJECT_NAME} "rosidl_typesupport_cpp"
+)
+
+# -------------------------------------------------------------------
+# Install
+# -------------------------------------------------------------------
 install(TARGETS object_localizer
   DESTINATION lib/${PROJECT_NAME}
 )
@@ -63,7 +86,7 @@ install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
 )
 
-# ------------------------------------------------------------------------------
-# Package export
-# ------------------------------------------------------------------------------
+# -------------------------------------------------------------------
+# Final export
+# -------------------------------------------------------------------
 ament_package()
