--- a/vision_localizer/package.xml
+++ b/vision_localizer/package.xml
@@ -3,22 +3,30 @@
 <package format="3">
   <name>vision_localizer</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Package for object localization from RGB-D images.</description>
+
   <maintainer email="vincosabri@gmail.com">sabri</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
-  <depend>cv_bridge</depend>
+  <depend>builtin_interfaces</depend>
   <depend>geometry_msgs</depend>
-  <depend>moveit_ros_planning_interface</depend>
-  <depend>opencv</depend>
-  <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>rclcpp</depend>
+  <depend>cv_bridge</depend>
+  <depend>OpenCV</depend>
+  <depend>tf2</depend>
   <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
     <build_type>ament_cmake</build_type>
